--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -35,6 +35,13 @@ jobs:
           workload_identity_provider: ${{ env.GCP_WORKLOAD_IDENTITY_PROVIDER }}
           service_account: ${{ env.GCP_SA }}
           token_format: access_token
+          create_credentials_file: true
+          export_environment_variables: true
+          cleanup_credentials: true
+          access_token_lifetime: 3600s
+          access_token_scopes: https://www.googleapis.com/auth/cloud-platform
+          id_token_include_email: false
+          universe: googleapis.com
 
       # https://github.com/docker/login-action?tab=readme-ov-file#google-artifact-registry-gar
       - name: Login to Artifact Registry
